Switch output-only input elements to divs
It is semantically correct, and makes for more natural
clicking/highlighting behavior, and is likely better for accessibility.

--- a/assets/css/retirement_buckets.css
+++ b/assets/css/retirement_buckets.css
@@ -10,7 +10,7 @@
    
    I had been using flex-wrap:wrap, but as the layout evolved, it came to look pretty
    terribly muddled when wrapping. */
-#flexbox-container {
+   #flexbox-container {
     margin-left:-118px;
     margin-right:-118px;
     border: 2px solid #707070;
@@ -145,7 +145,7 @@ input.slider-value-input {
     bottom: 0;
 }
 
-input.bucket-value-numeric {
+div.bucket-value-numeric {
     /* Explicit width rather than 100%, because I don't want to shrink when
        the viewport is small. */
     width: 150px;
@@ -168,7 +168,7 @@ div.results {
     text-align: center;
 }
 
-input.total-tax {
+div.total-tax {
     /* Explicit width rather than 100%, because I don't want to shrink when
         the viewport is small. */
     width: 250px;
