Try to get slider dragging to work on mobile
Work around Beautiful Jekyll jquery include hack, by renaming the
touch-punch js file to not include the word "jquery."

--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -21,7 +21,7 @@ common-ext-js:
 common-js:
   - "/assets/js/beautifuljekyll.js"
   - "/assets/js/retirement_buckets.js"
-  - "/assets/js/jquery.ui.touch-punch.min.js"
+  - "/assets/js/jq.ui.touch-punch.min.js"
 ---
 
 <!DOCTYPE html>
